test/1.2/errors/T_ESYNTAX_10.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
// Bug 8392
/// ERROR ESYNTAX
parameter documentation = "This
string has non-ascii chars in it";
